--- a/SecureCoding/SecureCoding/SecureCoding.vcproj
+++ b/SecureCoding/SecureCoding/SecureCoding.vcproj
@@ -190,12 +190,24 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="MultiThread"
+				>
+				<File
+					RelativePath=".\Consumer_10.cpp"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\MultiThread.h"
+				>
+			</File>
 			<File
 				RelativePath=".\SecureCoding.h"
 				>
