add multi thread 2

--- a/SecureCoding/SecureCoding/SecureCoding.vcproj
+++ b/SecureCoding/SecureCoding/SecureCoding.vcproj
@@ -197,6 +197,10 @@
 					RelativePath=".\Consumer_10.cpp"
 					>
 				</File>
+				<File
+					RelativePath=".\MultiThread_2.cpp"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
